some fix in database and some fix in game logic